syntax = "proto3";
package calculator;
option go_package = "grpcLearning/calculator/proto";

message MaxRequest {
    int32 readingValue = 1;
}

message MaxResponse {
    int32 result = 1;
}